[package]
name = "atoz-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true, features = ["default", "rwh_05"] }
tokio = { workspace = true, features = ["full"] }
bytemuck = { workspace = true, features = ["derive"] }
env_logger = "0.10.0"
image = { workspace = true }